# CLIWithClickAndTrogon

./: .gitignore  README.md  requirements.txt  setup.cfg
reporter/scripts/: __init__.py
scripts/: rpmq_click.py  rpmq_trogon.py
